# joan

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  zensical.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  phil.md  reference.md  review-workflow.md
docs/plans/: 2026-02-27-phil-code-review-bot-design.md  2026-02-27-phil-implementation.md  2026-03-01-joan-pr-comment-design.md  2026-03-01-joan-pr-comment-implementation.md  2026-03-01-joan-resolve-pr-design.md  2026-03-01-joan-resolve-pr-implementation.md
docs/uat/: 2026-02-28-phil-up-queue-worker-uat.md
forge/: docker-compose.yml
hooks/: enforce-review-branch.sh  hooks.json
plans/: design.md
scripts/: sync_skills.py
skills/joan-create-issue/: SKILL.md
skills/joan-get-work/: SKILL.md
skills/joan-plan/: SKILL.md
tests/: conftest.py  test_cli_api.py  test_cli_common.py  test_cli_doctor.py  test_cli_init_branch_remote.py  test_cli_issue.py  test_cli_phil.py  test_cli_plan.py  test_cli_pr_comment.py  test_cli_pr_narrative.py  test_cli_pr_review.py  test_cli_pr_reviews.py  test_cli_pr_update.py  test_cli_pr_worktree_and_entrypoint.py  test_cli_review_memory.py  test_cli_services.py  test_cli_ship.py  test_cli_skills.py  test_cli_ssh.py  test_cli_task.py  test_core_agents.py  test_core_config.py  test_core_forgejo.py  test_core_git.py  test_core_plans.py  test_phil_server.py  test_phil_worker.py  test_shell_config_io.py  test_shell_forgejo_client.py  test_shell_git_runner.py  test_shell_repo_state.py  test_skill_assets.py
(+74 files in other folders)
