[project]
name = "joan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Phinizy", email = "nipper@dorkery.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
joan = "joan:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
