[project]
name = "joan"
version = "0.1.0"
description = "Local code review gate for AI agents via Forgejo"
readme = "README.md"
authors = [
    { name = "Sam Phinizy", email = "nipper@dorkery.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
joan = "joan:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit a live local Forgejo instance",
]
